# PluginTemplate

./: .gitmodules  CMakeLists.txt  PluginAPI.cmake
cmake/: PluginAPI.cmake  PluginSystemConfig.cmake.in
extensionsystem/: CMakeLists.txt  iplugin.cpp  iplugin.h  pluginmanager.cpp  pluginmanager.h  pluginspecification.cpp  pluginspecification.h
plugin2/: CMakeLists.txt  plugin2.json.in
test/: CMakeLists.txt  main.cpp
test/plugin1/: CMakeLists.txt  plugin1.cpp  plugin1.h  plugin1.json.in
test/plugin2/: plugin2.cpp  plugin2.h
utils/: CMakeLists.txt
